# AMS-Y5

./: .RData  .Rhistory  .gitignore  pyproject.toml
EDA/: TP1_Variable_Types_Descriptive_Statistics.ipynb
IWR/: TP1.ipynb  http_ca.crt
NLP/: TP1.ipynb
TSA/: TP1.ipynb
